--- a/VectorDrawing(WinForm)/VectorDrawing(WinForm)/Resources/Locale.uk-UA.resx
+++ b/VectorDrawing(WinForm)/VectorDrawing(WinForm)/Resources/Locale.uk-UA.resx
@@ -141,11 +141,20 @@
   <data name="grbx_width" xml:space="preserve">
     <value>Ширина</value>
   </data>
+  <data name="languageToolStripMenuItem" xml:space="preserve">
+    <value>Мова</value>
+  </data>
   <data name="openToolStripMenuItem" xml:space="preserve">
     <value>Відкрити</value>
   </data>
   <data name="saveToolStripMenuItem" xml:space="preserve">
     <value>Зберегти</value>
+  </data>
+  <data name="settingsToolStripMenuItem" xml:space="preserve">
+    <value>Налаштування</value>
+  </data>
+  <data name="styleToolStripMenuItem" xml:space="preserve">
+    <value>Стиль</value>
   </data>
   <data name="tabsToolStripMenuItem" xml:space="preserve">
     <value>Вкладки</value>
@@ -160,6 +169,6 @@
     <value>Тип</value>
   </data>
   <data name="widthToolStripMenuItem" xml:space="preserve">
-    <value />
+    <value>Ширина</value>
   </data>
 </root>
